Added preference for marquee-select (case 370529: Selecting multiple objects in form designer is time consuming) Case: 370529